# centauri

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/api/core/: config.py  database.py  logging.py
apps/api/models/: user.py
apps/api/routers/: auth.py  deltas.py  match.py  newsletter.py  system.py
apps/api/schemas/: auth.py
apps/workers/: celery_app.py  worker_with_health.py
apps/workers/tasks/: __init__.py  ai.py  ingestion.py
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.worker.prod  compose-dev.yml  compose-prod.yml
infra/: main.tf  variables.tf
